
2009-07-06  Douglas Soares de Andrade  <douglas@archlinux.org>

	* Removed vim files for mercurial.

2009-07-06  Douglas Soares de Andrade  <douglas@archlinux.org>

	* Updated for x86_64: 1.3

2009-03-21  Douglas Soares de Andrade  <douglas@archlinux.org>

	* Updated for i686: 1.2.1

2009-03-05  Douglas Soares de Andrade  <douglas@archlinux.org>

	* Updated for i686: 1.2

2009-01-03  Douglas Soares de Andrade  <douglas@archlinux.org>

	* Updated for i686: 1.1.2

2008-12-02  Douglas Soares de Andrade  <douglas@archlinux.org>

	* Updated for i686: 1.1

2008-08-17  Douglas Soares de Andrade  <douglas@archlinux.org>

	* Updated for i686: 1.0.2

2008-07-10  Douglas Soares de Andrade  <douglas@archlinux.org>

	* Updated for i686: 1.0.1
